fix backfaces of album covers being rendered over other cds

--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ body {
     object-fit: cover;
 
     transform: translate3d(0, 0, 10px);
+    backface-visibility: hidden;
 }
 
 .album > .back {
